--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:description" content="Stock local · Retiro en 2 h · Precios mayoristas para instaladores.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://tedle-cordoba-landing.vercel.app/">
-  <meta property="og:image" content="https://images.unsplash.com/photo-1509395176047-4a66953fd231?auto=format&fit=crop&w=1600&q=80">
+  <meta property="og:image" content="/og.jpg">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Paneles Solares Tier One en Córdoba | Tedle">
